--- a/src/main/resources/assets/me/lang/en_US.lang
+++ b/src/main/resources/assets/me/lang/en_US.lang
@@ -1,8 +1,16 @@
-itemGroup.mechanicalExpansionTab=Mechanical Expansion
+itemGroup.mechanical_tab=Mechanical Expansion
 
 tile.combustion_generator.name=Combustion Generator
-tile.oreCopper.name=Copper ore
+tile.electric_furnace.name=Electric Furnace
 
-item.ingotCopper.name=Copper Ingot
+tile.copper_ore.name=Copper ore
+
+item.copper_ingot.name=Copper Ingot
+item.lead_ingot.name=Lead Ingot
+
+item.pulverized_coal.name=Pulverized Coal
+item.coal_coke.name=Coal Coke
+item.wrench.name=Wrench
+
 item.corn.name=Corn
 item.seedCorn.name=Corn Seed
