--- a/src/main/resources/assets/me/lang/en_US.lang
+++ b/src/main/resources/assets/me/lang/en_US.lang
@@ -4,6 +4,7 @@ tile.combustion_generator.name=Combustion Generator
 tile.electric_furnace.name=Electric Furnace
 
 tile.copper_ore.name=Copper ore
+tile.machine_casing.name=Machine Casing
 
 item.ingot_copper.name=Copper Ingot
 item.ingot_lead.name=Lead Ingot
@@ -11,6 +12,10 @@ item.ingot_lead.name=Lead Ingot
 item.pulverized_coal.name=Pulverized Coal
 item.coal_coke.name=Coal Coke
 item.wrench.name=Wrench
+item.wire_cutters.name=Wire Cutters
+
+item.sheet_copper.name=Copper Sheet
+item.wire_copper.name=Copper Wire
 
 item.corn.name=Corn
 item.seed_corn.name=Corn Seed
